--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ svg {
     margin-top: 0px;
 }
 
-.red-queen {
+.memorize, .red-queen {
     font-variant: small-caps !important;
     text-transform: none !important;
 }
